src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@layer base {
  :root {
    --radius: 0.5rem
  }
}
@font-face {
  font-family: "ChiKareGo2";
  src: url("https://db.onlinewebfonts.com/t/20879f289f178c7c99a7623b1bcda06f.eot");
  src: url("https://db.onlinewebfonts.com/t/20879f289f178c7c99a7623b1bcda06f.eot?#iefix")format("embedded-opentype"),
  url("https://db.onlinewebfonts.com/t/20879f289f178c7c99a7623b1bcda06f.woff2")format("woff2"),
  url("https://db.onlinewebfonts.com/t/20879f289f178c7c99a7623b1bcda06f.woff")format("woff"),
  url("https://db.onlinewebfonts.com/t/20879f289f178c7c99a7623b1bcda06f.ttf")format("truetype"),
  url("https://db.onlinewebfonts.com/t/20879f289f178c7c99a7623b1bcda06f.svg#ChiKareGo2")format("svg");
}
body {
  @apply cursor-default;
}

.markdown-body {
  background-color: transparent;
  color: black;
  /* font-family: "ChiKareGo2", sans-serif; */
  /* min-width: 200px;
  max-width: 980px;
  margin: 0 auto;
  padding: 45px; */
}

@media (max-width: 767px) {
  .markdown-body {
    padding: 15px;
  }
}

.markdown-body ul {
  list-style-type: disc !important;
}

.markdown-body ol {
  list-style-type: decimal !important;
}

